# kremlin

./: .gitignore  Makefile  MemMapPool.c  MemMapPool.h  README.md  debug.c  debug.h  defs.h  install.sh  kmalloc.c  kmalloc.h  log.c  log.h  main.c  pool.c  pool.h  pyrprof.c  pyrprof.h  skeleton.c  table.c  table.h  udr.c  udr.h
doc/: Doxyfile
instrument/: CMakeLists.txt
instrument/llvm/: .gitignore  Makefile  llvm-2.8-install.sh
instrument/make/: SConscript  SConstruct  assemble.mk  buildTools.mk  checkRequiredFiles.mk  compile.mk  eliminateImplicitRules.mk  eliminateOverrides.mk  kremlin.mk  kremlinLib.mk  link.mk  llvmGenericRules.mk  llvmRules.mk  outputName.mk  spaceAndEmpty.mk  useTemp.mk
instrument/src/: AllocaHandler.cpp  AllocaHandler.h  AssociativeDependenceBreak.cpp  CMakeLists.txt  CallInstHandler.cpp  CallInstHandler.h  CallableHandler.h  CallableHandler.tcc  CompileUnitDebugInfo.cpp  CompileUnitDebugInfo.h  ControlDependencePlacer.cpp  ControlDependencePlacer.h  CriticalPath.cpp  DebugInfoParser.cpp  DebugInfoParser.h  DynamicMemoryHandler.cpp  DynamicMemoryHandler.h  EliminateSingleInputPHIs.cpp  FuncAnalyses.cpp  FuncAnalyses.h  FuncRegion.cpp  FuncRegion.h  FunctionArgsHandler.cpp  FunctionUniquify.cpp  GetTerminator.cpp  GetTerminator.h  GlobalTableAllocator.cpp  HashRegionIdGenerator.cpp  HashRegionIdGenerator.h  InstrumentationCall.h  InstrumentationFuncManager.cpp  InstrumentationFuncManager.h  InstrumentedCall.h  InstrumentedCall.tcc  InstrumentedCallSite.h  KremlibDump.cpp  LLVMTypes.cpp  LLVMTypes.h  LoadHandler.cpp  LocalTableHandler.cpp  (+31 more)
(+559 files in other folders)
